# easyrenting-clients

./: .env.example  .gitignore  README.md  pyproject.toml
config/: env.py
db/: client_repo.py  in_memory.py  sqlalchemy.py
domain/: client.py
domain/exceptions/: invalid_age.py  invalid_document.py
entrypoint/: main.py
services/mail/: mail_service.py  smtp.py  terminal.py
tests/domain/: test_client.py
tests/entrypoint/: test_main.py
tests/usecases/: test_register.py
tests/usecases/__mock__/: client_repo.py  mail_service.py
usecases/: activate_client.py  get_all.py  register.py
usecases/dtos/: client.py
usecases/exceptions/: client_not_found.py  duplicated_document_number.py  duplicated_email.py  expired_activation_token.py
utils/: mail.py  validate_cpf.py
